--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cek Kartu Kredit</title>
+  <title>Credit Card Checker</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="icon" href="https://raw.githubusercontent.com/MarinaAqua/MarinaAqua/main/my-profil.png"/>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     /* Tailwind Default Dark Mode */
@@ -59,6 +61,52 @@
     .button-container button:hover {
       opacity: 0.9;
     }
+
+      /* Rainbow Text Styles */
+    .rainbow-text {
+      font-weight: bold;
+      text-align: center;
+      text-transform: uppercase;
+      background: linear-gradient(270deg, red, orange, yellow, green, cyan, blue, violet, red);
+      background-size: 200% auto;
+      color: transparent;
+      background-clip: text;
+      -webkit-background-clip: text;
+      animation: shimmer 5s linear infinite;
+      text-shadow: 0 0 5px #fff5, 0 0 5px #0ff6;
+    }
+
+    @keyframes shimmer {
+      0% {
+        background-position: 200% center;
+      }
+      100% {
+        background-position: 0% center;
+      }
+    }
+    
+    .social-footer {
+      margin-top: 1rem;
+      margin-bottom:1rem;
+      text-align: center;
+      font-size: 1.8rem;
+    }
+    .social-footer a {
+      color: #ccc;
+      margin: 0 10px;
+      transition: color 0.3s;
+    }
+    .social-footer a:hover {
+      color: #fff;
+    }
+    
+    .copyright-footer {
+      text-align: center;
+      margin-top: 0.8rem;
+      margin-bottom:1rem;
+      font-size: 0.9rem;
+      color: #777;
+    }
   </style>
 </head>
 <body class="bg-gray-900 text-white dark:bg-gray-900 dark:text-white">
@@ -67,8 +115,10 @@
   <div class="min-h-screen flex flex-col items-center justify-center p-6">
 
     <!-- Title -->
-    <h1 class="text-4xl font-semibold mb-4">Cek Kartu Kredit</h1>
-    <p class="text-lg text-gray-400 mb-6">Masukkan nomor kartu kredit yang ingin diperiksa. Pisahkan dengan koma atau baris baru.</p>
+    <div class="rainbow-text mb-8">
+          <h1 class="text-4xl">CLUB GRATIS</h1></div>
+    <a class="text-4x1 text-green-400 mb-6">Premium Checker</a>
+    <p class="text-lg text-gray-400 mb-6">Enter the credit card numbers you wish to verify. Separate them with commas or new lines.</p>
 
     <!-- Button Donate and Link (aligned left and right) -->
     <div class="button-container mb-4">
@@ -84,13 +134,13 @@
     </div>
 
     <!-- Input Area -->
-    <textarea id="cc-input" rows="6" class="w-full max-w-lg p-4 bg-gray-800 rounded-lg text-white focus:outline-none focus:ring-2 focus:ring-indigo-500" placeholder="Masukkan nomor CC..."></textarea><br>
+    <textarea id="cc-input" rows="6" class="w-full max-w-lg p-4 bg-gray-800 rounded-lg text-white focus:outline-none focus:ring-2 focus:ring-indigo-500" placeholder="Input CC Number..."></textarea><br>
 
     <!-- Check Button -->
-    <button onclick="checkCC()" class="mt-4 bg-indigo-600 text-white px-6 py-3 rounded-lg hover:bg-indigo-500 focus:outline-none focus:ring-2 focus:ring-indigo-500">Periksa</button>
+    <button onclick="checkCC()" class="mt-4 bg-indigo-600 text-white px-6 py-3 rounded-lg hover:bg-indigo-500 focus:outline-none focus:ring-2 focus:ring-indigo-500">Check</button>
 
     <!-- Loading Indicator -->
-    <div id="loading" class="text-indigo-400 mt-4 hidden">Memeriksa...</div>
+    <div id="loading" class="text-indigo-400 mt-4 hidden">Checking...</div>
 
     <!-- Filter Buttons -->
     <div id="status-filter" class="mt-6 flex space-x-4">
@@ -120,6 +170,19 @@
     </div>
   </div>
 
+  <footer class="social-footer">
+  <a href="https://github.com/MarinaAqua" target="_blank"><i class="fa fa-github"></i></a>
+  <a href="https://youtube.com/Mr.King'sOfficial" target="_blank"><i class="fa fa-youtube"></i></a>
+  <a href="https://t.me/club_gratis" target="_blank"><i class="fa fa-telegram"></i></a>
+</footer>
+
+  <div class="rainbow-text mb-8">
+    <a class="text-4xl">CLUB GRATIS</a>
+    </div>
+          <div class="copyright-footer">
+            &copy; <span id="year"></span> Club Gratis. Allrights reserved.
+            </div>
+ 
   <script>
     let approvedResults = [];
     let declinedResults = [];
@@ -266,14 +329,17 @@
       if (approvedResults.length > 0) {
         const approvedCCs = approvedResults.map(result => `${result.cc} | Status: Approved ✅ | Respon: ${result.response} | Group: @club_gratis`).join("\n");
         navigator.clipboard.writeText(approvedCCs).then(() => {
-          alert("Semua CC yang Approved telah disalin ke clipboard.");
+          alert("All Approved CCs have been copied to the clipboard.");
         }).catch(err => {
-          alert("Gagal menyalin ke clipboard.");
+          alert("Failed to copy to clipboard.");
         });
       } else {
-        alert("Tidak ada CC yang Approved.");
+        alert("No CC Approved.");
       }
     }
   </script>
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+    </script>
 </body>
 </html>
