--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
     <!-- Button Donate and Link (aligned left and right) -->
     <div class="button-container mb-4">
       <!-- Donate Button -->
-      <button id="donate-button" onclick="openDonatePopup()" class="bg-indigo-600 text-white rounded-lg hover:bg-indigo-500 focus:outline-none focus:ring-2 focus:ring-indigo-500">
+      <button id="donate-button" onclick="openDonatePopup()" class="bg-transparent text-white rounded-lg hover:bg-transparent focus:outline-none focus:ring-2 focus:ring-indigo-500">
         Donate
       </button>
 
       <!-- Link Button -->
-      <button id="link-button" onclick="openLink()" class="bg-blue-600 text-white rounded-lg hover:bg-blue-500 focus:outline-none focus:ring-2 focus:ring-blue-500">
-        Link
+      <button id="link-button" onclick="openLink()" class="bg-transparent text-white rounded-lg hover:bg-transparent focus:outline-none focus:ring-2 focus:ring-blue-500">
+        Gen CC
       </button>
     </div>
 
