--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
     <!-- Button Donate and Link (aligned left and right) -->
     <div class="button-container mb-4">
       <!-- Donate Button -->
-      <button id="donate-button" onclick="openDonatePopup()" class="bg-transparent text-white rounded-lg hover:bg-transparent focus:outline-none focus:ring-2 focus:ring-indigo-500">
-        Donate
+      <button id="donate-button" onclick="openDonatePopup()" class="bg-transparent text-white rounded-lg hover:bg-transparent focus:outline-none focus:ring-2 focus:bg-transparent">
+        💝Donate
       </button>
 
       <!-- Link Button -->
-      <button id="link-button" onclick="openLink()" class="bg-transparent text-white rounded-lg hover:bg-transparent focus:outline-none focus:ring-2 focus:ring-blue-500">
-        Gen CC
+      <button id="link-button" onclick="openLink()" class="bg-transparent text-white rounded-lg hover:bg-transparent focus:outline-none focus:ring-2 focus:bg-transparent">
+        🔁Gen CC
       </button>
     </div>
 
