--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       </button>
 
       <!-- Link Button -->
-      <button id="link-button" onclick="openLink()" class="bg-transparent text-white rounded-lg hover:bg-transparent focus:outline-none focus:ring-2 focus:bg-transparent">
+      <button id="link-button" onclick="openLink()" class="bg-transparent text-white rounded-lg hover:bg-transparent">
         🔁Gen CC
       </button>
     </div>
