--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
     <!-- Button Donate and Link (aligned left and right) -->
     <div class="button-container mb-4">
       <!-- Donate Button -->
-      <button id="donate-button" onclick="openDonatePopup()" class="bg-transparent text-white rounded-lg hover:bg-transparent focus:outline-none focus:ring-2 focus:bg-transparent">
+      <button id="donate-button" onclick="openDonatePopup()" class="bg-transparent text-white rounded-lg hover:bg-transparent">
         💝Donate
       </button>
 
       <!-- Link Button -->
       <button id="link-button" onclick="openLink()" class="bg-transparent text-white rounded-lg hover:bg-transparent">
-        🔁Gen CC
+        💳Gen CC
       </button>
     </div>
 
@@ -177,7 +177,7 @@
 </footer>
 
   <div class="rainbow-text mb-8">
-    <a class="text-4xl">CLUB GRATIS</a>
+    <p class="text-4xl">CLUB GRATIS</p>
     </div>
           <div class="copyright-footer">
             &copy; <span id="year"></span> Club Gratis. Allrights reserved.
