Updated your api

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
     // Fungsi untuk pengecekan setiap CC
     async function checkSingleCC(cc) {
-      const url = `https://api-cc.xcs.biz.id/${cc}`;  // API yang kamu sebutkan
+      const url = `https://your.api.com/${cc}`;  // API yang kamu sebutkan
       try {
         const response = await fetch(url);
         const result = await response.json();
